# distro-iso-feed

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  config-audit.yml  discover.yml  refresh.yml
config/: sources.yaml
docs/: architecture.md  catalog.md  distro-iso-feed-spec.md  failure-escalation-spec.md  operations.md
feed/: README.md  feed.rss  feed.xml  latest.json  torrent.rss  torrent.xml
feed/by-distro/: almalinux.xml  anduinos.xml  antix.xml  arch.xml  aurora.xml  batocera.xml  bazzite.xml  bluefin.xml  bluestar.xml  cachyos.xml  centos.xml  chimeraos.xml  clonezilla.xml  debian.xml  edubuntu.xml  endeavouros.xml  fedora.xml  freebsd.xml  garuda.xml  gentoo.xml  ghostbsd.xml  kali.xml  kde-neon.xml  kubuntu.xml  lubuntu.xml  manjaro.xml  memtest.xml  minios.xml  mint.xml  mx.xml  netbsd.xml  nixos.xml  nobara.xml  openbsd.xml  openmediavault.xml  opensuse.xml  opnsense.xml  parrot.xml  pop-os.xml  proxmox.xml  (+15 more)
src/distro_iso_feed/: arch.py  audit.py  checksums.py  client.py  config.py  docs.py  escalate.py  feed.py  gpgverify.py  models.py  (+16 more)
state/: state.json
tests/: conftest.py  test_arch_discovery.py  test_audit.py  test_checksums.py  test_client_and_discover.py  test_end_to_end.py  test_families.py  test_feed_state_config.py  test_new_sources.py  test_propose.py  test_proxmox.py  test_refactor_seams.py  test_run_audit.py  test_run_discover.py  test_run_refresh.py  test_select.py  test_signing_key.py  test_strategies.py  test_torrent_colocated.py  test_torrent_only.py  test_torrents.py
(+12 files in other folders)
